--- a/RoFty/templates/search.ejs
+++ b/RoFty/templates/search.ejs
@@ -1,47 +1,40 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
-<head>
+  <head>
     <%- include('./includes/head', { siteTitle: themeConfig.siteName }) %>
-        <script src="<%= themeConfig.domain %>/media/gridea-search/fuse.basic.min.js"></script>
-        <script src="<%= themeConfig.domain %>/media/gridea-search/ejs.min.js"></script>
-        <script src="<%= themeConfig.domain %>/media/gridea-search/gridea-search.js"></script>
-        <script src="<%= themeConfig.domain %>/media/gridea-search/result-template.ejs" type="text/ejs"></script>
-</head>
+  </head>
 
-<body>
+  <body>
+    <%- include('./includes/navbar') %> <%- include('./includes/header') %>
+    <style>
+      .searched-keyword {
+        background-color: yellow;
+      }
 
-    <%- include('./includes/navbar') %>
-
-        <%- include('./includes/header') %>
-
-            <style>
-                .searched-keyword {
-                    background-color: yellow;
-                }
-
-
-                .searching,
-                .no-result {
-                    text-align: center;
-                    font-size: 44px;
-                    color: var(--context-text-color);
-                    margin-bottom: 90px;
-                }
-            </style>
-            <div class="container animated">
-                <div id="gridea-search-result" data-update="<%= site.utils.now %>">
-                    <div class="searching">
-                        <div class="spinner-border" role="status">
-                        </div>搜索中......
-                    </div>
-                    <div class="no-result" style="display:none">未搜索到相关文章</div>
-                </div>
-            </div>
-            <%- include('./includes/footer') %>
-
-                <%- include('./includes/script') %>
-
-</body>
-
+      .searching,
+      .no-result {
+        text-align: center;
+        font-size: 44px;
+        color: var(--context-text-color);
+        margin-bottom: 90px;
+      }
+    </style>
+    <div class="container animated">
+      <div id="gridea-search-result" data-update="<%= site.utils.now %>">
+        <div class="searching">
+          <div class="spinner-border" role="status"></div>
+          搜索中......
+        </div>
+        <div class="no-result" style="display: none">未搜索到相关文章</div>
+      </div>
+    </div>
+    <%- include('./includes/footer') %> <%- include('./includes/script') %>
+    <script
+      src="<%= themeConfig.domain %>/media/gridea-search/result-template.ejs"
+      type="text/ejs"
+    ></script>
+    <script src="<%= themeConfig.domain %>/media/gridea-search/fuse.basic.min.js"></script>
+    <script src="<%= themeConfig.domain %>/media/gridea-search/ejs.min.js"></script>
+    <script src="<%= themeConfig.domain %>/media/gridea-search/gridea-search.js"></script>
+  </body>
 </html>
