--- a/RoFty/assets/styles/components/post-list.css
+++ b/RoFty/assets/styles/components/post-list.css
@@ -59,7 +59,10 @@
   padding: 0;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-  box-shadow: 0px 2px 15px -8px var(--main-color);
+  box-shadow: 0px 2px 15px -5px var(--main-color);
+}
+.card:hover.hasImg {
+  margin-bottom: 1.25rem;
 }
 .card:hover .role {
   padding-top: 0.5rem;
