--- a/RoFty/assets/styles/components/post-list.less
+++ b/RoFty/assets/styles/components/post-list.less
@@ -75,7 +75,11 @@
       padding: 0;
       border-top-left-radius: 0;
       border-top-right-radius: 0;
-      box-shadow: 0px 2px 15px -8px var(--main-color);
+      box-shadow: 0px 2px 15px -5px var(--main-color);
+    }
+
+    &.hasImg {
+      margin-bottom: (0.75rem + 0.5rem);
     }
 
     .role {
