--- a/RoFty/templates/includes/head.ejs
+++ b/RoFty/templates/includes/head.ejs
@@ -42,6 +42,13 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700"
 />
+
+<!-- 谷歌图标 -->
+<link
+  rel="stylesheet"
+  href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0"
+/>
+
 <script
   id="MathJax-script"
   async
