--- a/RoFty/assets/styles/components/navbar.less
+++ b/RoFty/assets/styles/components/navbar.less
@@ -70,6 +70,7 @@
         }
 
         input {
+            flex: 1 1 0;
             background-color: transparent;
         }
 
@@ -77,7 +78,7 @@
         .btn-search {
             cursor: pointer;
             width: 24px;
-            background-color: var(--box-bg-color);
+            background-color: transparent;
             height: 24px;
             color: var(--context-text-color);
 
